--- a/src/components/cookies/CookieSettingsModal.css
+++ b/src/components/cookies/CookieSettingsModal.css
@@ -117,7 +117,7 @@
 }
 
 .cookie-learn-more-link:hover {
-  color: #c4b5fd;
+  color: #f0e6ff;
 }
 
 .cookie-settings-actions {
